# datahub-contract-bridge

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: live-datahub-integration.yml
examples/verified-live/: README.md  plan.json  plan.md  writeback-receipt.json
src/contract_bridge/: __init__.py  cli.py  domain.py  fixture.py  manifest.py  mcp_catalog.py  mcp_writeback.py  planner.py
submission/: DEVPOST.md  VIDEO.md
submission/video/: index.html  render.sh
submission/video/narration/: 01.txt  02.txt  03.txt  04.txt  05.txt  06.txt
tests/: test_manifest.py  test_mcp_catalog.py  test_mcp_writeback.py  test_planner.py
tests/fixtures/: catalog.json  manifest.json  sample-hive-manifest.json  sample-kafka-manifest.json
