[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "datahub-contract-bridge"
version = "0.1.0"
description = "Turn dbt contracts into lineage-aware, reviewable DataHub change plans."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [{name = "Hero988"}]
dependencies = []

[project.optional-dependencies]
mcp = [
  "mcp>=1.20,<2",
  "mcp-server-datahub>=0.6,<1",
]
dev = [
  "pytest>=8.3,<9",
  "ruff>=0.12,<1",
]

[project.scripts]
datahub-contract-bridge = "contract_bridge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

